WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77771
positive and negative flex values are not being cleared on style changes
https://bugs.webkit.org/show_bug.cgi?id=77771
Summary
positive and negative flex values are not being cleared on style changes
Tony Chang
Reported
2012-02-03 13:32:11 PST
positive and negative flex values are not being cleared on style changes
Attachments
Patch
(4.46 KB, patch)
2012-02-03 13:33 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.35 KB, patch)
2012-02-03 13:43 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-02-03 13:33:27 PST
Created
attachment 125397
[details]
Patch
Ojan Vafai
Comment 2
2012-02-03 13:40:00 PST
Comment on
attachment 125397
[details]
Patch How about writing this as: float positiveFlex = 0; float negativeFlex = 0; if (!value->isPrimitiveValue()) { if (!flexDirection || !value->isFlexValue()) return; CSSFlexValue* flexValue = static_cast<CSSFlexValue*>(value); value = flexValue->preferredSize(); positiveFlex = flexValue->positiveFlex(); negativeFlex = flexValue->negativeFlex(); } if (flexDirection == FlexWidth) { ... } else if (flexDirection == FlexHeight) { ... }
Tony Chang
Comment 3
2012-02-03 13:43:00 PST
Created
attachment 125402
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-02-03 16:10:35 PST
Comment on
attachment 125402
[details]
Patch for landing Clearing flags on attachment: 125402 Committed
r106704
: <
http://trac.webkit.org/changeset/106704
>
WebKit Review Bot
Comment 5
2012-02-03 16:10:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug