positive and negative flex values are not being cleared on style changes https://bugs.webkit.org/show_bug.cgi?id=77771

Reviewed by Ojan Vafai.

Source/WebCore:

If the width or height was a flex() value, but is no longer a flex
value, we weren't clearing the positive and negative flex values in
RenderStyle.

Test: css3/flexbox/flex-no-flex.html

* css/CSSStyleApplyProperty.cpp:
(WebCore::ApplyPropertyLength::applyValue):

LayoutTests:

* css3/flexbox/flex-no-flex-expected.txt: Added.
* css3/flexbox/flex-no-flex.html: Added.


Canonical link: https://commits.webkit.org/94640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106704 268f45cc-cd09-0410-ab3c-d52691b4dbfc